syntax = "proto3";

package io.vinicius.banking.proto;
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

enum TransactionType {
    DEPOSIT = 0;
    WITHDRAWAL = 1;
    TRANSFER = 2;
    PAYMENT = 3;
}

message Transaction {
    uint32 id = 1;
    uint32 account_id = 2;
    TransactionType type = 3;
    string amount = 4;
    optional uint32 destination_account_id = 5;
    optional string message = 6;
    google.protobuf.Timestamp created_at = 7;
}

message TransactionList {
    repeated Transaction results = 1;
}